# esp-nmea-bridge

./: .clangd  .gitignore  AGENTS.md  CMakeLists.txt  CONTEXT.md  Kconfig  README.md  prj.conf  sysbuild.conf  west.yml
.devcontainer/: Dockerfile  devcontainer.json  setup-workspace.sh  sync-workspace.sh  update-workspace.sh
boards/waveshare/esp32c6_dev_kit_n8/: Kconfig  Kconfig.esp32c6_dev_kit_n8  board.yml  esp32c6_dev_kit_n8_hpcore.dts  esp32c6_dev_kit_n8_hpcore.yaml  esp32c6_dev_kit_n8_lpcore.dts  esp32c6_dev_kit_n8_lpcore.yaml
boards/waveshare/esp32c6_dev_kit_n8/doc/: index.rst
boards/waveshare/esp32c6_dev_kit_n8/support/: 99-waveshare-esp32c6-dev-kit-n8.rules
docs/adr/: 0001-status-led-observer.md  0002-runtime-config-settings-nvs.md
docs/agents/: domain.md
src/: ais_mmsi_filter.c  ais_mmsi_filter.h  bridge_config.c  bridge_config.h  bridge_telemetry.c  bridge_telemetry.h  main.c  nmea_bridge.c  nmea_dns_sd.c  ota_update.c  ota_update.h  status_led.c  status_led.h  status_led_policy.c  status_led_policy.h  tcp_nmea_client.c  tcp_nmea_client.h  tcp_nmea_server.c  tcp_nmea_server.h  tcp_nmea_session.c  tcp_nmea_session.h  uart_nmea.c  uart_nmea.h  web_app.c  web_app.h  web_assets.S.in  wifi_manager.c  wifi_manager.h
src/web_assets/: app.js  index.html  style.css
sysbuild/: CMakeLists.txt  mcuboot.conf
tests/ais_mmsi_filter/: CMakeLists.txt  testcase.yaml
tests/ais_mmsi_filter/src/: main.c
tests/bridge_config/: CMakeLists.txt  prj.conf  testcase.yaml
tests/bridge_config/src/: main.c
tests/bridge_telemetry/src/: main.c
tests/ota_update/: CMakeLists.txt  testcase.yaml
tests/ota_update/src/: main.c
tests/status_led/: CMakeLists.txt  Kconfig  fake_strip.overlay  testcase.yaml
tests/status_led/dts/bindings/: vnd,fake-led-strip.yaml
tests/status_led/src/: fake_led_strip.c  fake_led_strip.h  main.c
tests/status_led_policy/src/: main.c
tests/web_app_ota/: CMakeLists.txt  README.md  browser_state_harness.mjs  prj.conf  testcase.yaml
tests/web_app_ota/src/: main.c
